# pwhl-client

./: .env.example  Makefile  README.md  pwhl-client-spec.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/pwhl_client/: __init__.py  __main__.py  cli.py  client.py  exceptions.py  models.py  parser.py
tests/: conftest.py  test_cli.py  test_client.py  test_models.py  test_parser.py
